snapshots/care/data4life/hc-util-sdk-kmp/error/maven-metadata.xml.sha1
5c80f396fb5cc81c50b385d4b430048166a9c51d